# times-tables-quiz

./: CMakeLists.txt  README.md
include/tts/: auto_locale_descriptor.hpp  self_updating_translator.hpp  translation_resources.hpp  tts_settings.hpp
src/app/: CMakeLists.txt  Main.qml  QuizConfigView.qml  QuizSettings.qml  QuizView.qml  SettingsView.qml  auto_locale.cpp  auto_locale.hpp  factor_range.cpp  factor_range.hpp  language_list_model.cpp  language_list_model.hpp  main.cpp  question.cpp  question.hpp  quiz_config.cpp  quiz_config.hpp  settings_backend.cpp  settings_backend.hpp
src/app/i18n/: qml_de.ts
src/timestables/: CMakeLists.txt
src/tts/: translation_resources.cpp
test/tts/: auto_locale_test.cpp  self_updating_translator_test.cpp  test_translation_resources.hpp
